# R-Type

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  assets  cmake_install.cmake  conanfile.txt  main.c  r-type_client  r-type_server  vcpkg.json
.github/workflows/: cmake.yml  main.yml
Client/assets/SpaceParallax/: a.out
Client/src/: Inputs.cpp  Main.cpp  R-Type.cpp  R-Type.hpp
Client/src/GameStatus/: Game.cpp  Game.hpp  IGameStatus.hpp  Menu.cpp  Menu.hpp  Settings.cpp  Settings.hpp
Client/src/Utils/: Audio.cpp  Audio.hpp  Inputs.cpp  Inputs.hpp  Utils.cpp  Utils.hpp
Documentation/: README.md  Server.md  index.html
Network/: Deserialization.cpp  Deserialization.hpp  Serialization.cpp  Serialization.hpp
Network/Data/: Enums.hpp  GameObject.hpp  IGameObject.hpp  PlayerObject.hpp  PopulateObject.cpp  PopulateObject.hpp
Network/Objects/: Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  Explosion.cpp  Explosion.hpp  IObject.hpp  Object.cpp  Object.hpp  Player.cpp  Player.hpp  PowerUp.cpp  PowerUp.hpp  Sound.cpp  Sound.hpp
Network/dataStruct/: IGameObject.hpp  enemyObject.hpp  enums.hpp  gameObject.hpp  playerObject.hpp  populateObject.cpp  populateObject.hpp
Server/Network/UDP/: ClientUDP.hpp  UDP.hpp
Server/Network/cEncapsulation/: bind.hpp  cHead.hpp  initSocketAddressStruct.hpp  recvfrom.hpp  send.hpp
Server/Network/config/: Ctx.hpp
Server/Network/interfaces/: INetwork.hpp
Server/src/: Main.cpp  Server.cpp  Server.hpp  TCPServer.cpp  TCPServer.hpp  TCPSession.cpp  TCPSession.hpp  UDPServer.cpp  UDPServer.hpp
assets/SpaceParallax/: test.cpp
assets/asteroids-font/: info.txt
cmake/: Findraylib.cmake
documentation/: README.md
includes/: Main.hpp
includes/Encapsulation/: Color.hpp  Draw.hpp  Load.hpp  MyGamepad.hpp  Objects.hpp  Sound.hpp  Window.hpp
includes/Network/: Enums.hpp
includes/Network/UDP/: ServerUDP.hpp  UDPAsyncServer.hpp  UDPClient.hpp  UDPServer.hpp  async  client  client.cpp  server  serveur.cpp  testAsync.cpp  testServer.cpp
includes/Network/cEncapsulation/: cError.hpp  socket.hpp
includes/Network/includes/: headers.hpp  network.hpp
includes/Network/interfaces/: INetwork.hpp
includes/Network/packets/: seriaTest.cpp
includes/Network/packets/dataStruct/: IGameObject.hpp  enemyObject.hpp  gameObject.cpp  gameObject.hpp  playerObject.hpp  populateObject.hpp
includes/Network/packets/deserialization/: deserialization.hpp
includes/Network/packets/serialization/: serialization.hpp
includes/networking/UDP/: UDPClient.hpp  UDPServer.hpp
includes/networking/includes/: enums.hpp  headers.hpp
includes/networking/interfaces/: IGameObject.hpp  INetwork.hpp
includes/networking/packets/dataStruct/: enemyObject.hpp  gameObject.hpp  playerObject.hpp  populateObject.hpp
includes/networking/packets/deserialization/: deserialization.hpp
includes/networking/packets/serialization/: serialization.hpp
networking/UDP/: UDPAsyncServer.hpp  UDPClient.hpp  UDPServer.hpp  client  server  testAsync.cpp  testClient.cpp
networking/packets/: dese  deseriaTest.cpp  seria  seriaTest.cpp
networking/packets/dataStruct/: IGameObject.hpp  gameObject.cpp  gameObject.hpp  populateObject.hpp
networking/packets/deserialization/: deserialization.hpp
networking/packets/serialization/: serialization.hpp
src/: Main.cpp  R-Type.cpp  R-Type.hpp
src/Ecs/Components/: Health.cpp  Health.hpp
src/Ecs/Entities/: EntityManager.cpp  EntityManager.hpp
src/Ecs/Systems/: Player.cpp  Player.hpp
src/Encapsulation/: Draw.cpp  Gamepad.cpp  Load.cpp  Sound.cpp  Window.cpp
src/GameStatus/: Game.cpp  Game.hpp  IGameStatus.hpp  Menu.cpp  Menu.hpp
src/client/: a.out  main.cpp
src/client/graphics/: draw.cpp  events.cpp  gameLoop.cpp
src/server/: a.out  main.cpp
src/server/game/: gameLoop.cpp
src/server/network/: server.cpp
